--- a/Bookshelf/frontend/src/styles.css
+++ b/Bookshelf/frontend/src/styles.css
@@ -8,6 +8,7 @@ body, html {
     height: 100vh;
     background-color: #ffff;
     font-family: "Istok Web";
+    transition: all 0.3s ease-in-out;
   }
   
   .container {
