--- a/Bookshelf/frontend/src/styles/BookForm.css
+++ b/Bookshelf/frontend/src/styles/BookForm.css
@@ -1,111 +1,409 @@
-/* BookForm.css */
-.book-creation-container {
+.bf-book-creation-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
     padding: 20px;
     width: 90vw;
-    height: 40vw;
-    margin: 50px auto;
-    background-color: #f7f7f7; /* Light grey for the form background */
+    height: 37vw;
+    margin: 1% auto;
+    background-color: #f7f7f7;
     border-radius: 8px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
 }
 
-h1 {
+.bf-createbook-pagetitle {
     text-align: center;
     color: #333;
     margin-bottom: 20px;
     font-size: 1.5rem;
 }
 
-.form-group {
+.bf-createbook-form-group {
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
 }
 
-label {
+.bf-createbook-spotlabel {
     font-weight: bold;
     color: #555;
     margin-bottom: 5px;
 }
 
-input[type="text"],
-textarea,
-input[type="date"],
-input[type="file"] {
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    font-size: 1rem;
-}
-
-textarea {
-    resize: none; /* Disable resizing for a cleaner design */
-    height: 100px;
-}
-
-button {
-    padding: 12px;
-    font-size: 1rem;
+.bf-createbook-spotlabel_textarea {
     font-weight: bold;
-    border: none;
+    color: #555;
+    margin-bottom: 5px;
+    margin-top: 2%;
+    margin-left: -13.8%;
+}
+
+.bf-input {
+    width: 30%;
+    padding: 10px;
+    border: 1px solid #ccc;
     border-radius: 5px;
+    font-size: 1rem;
+    color: #333;
+    margin-left: 10px;
+}
+
+.bf-input-button-group {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.bf-textarea {
+    margin-top: 1%;
+    margin-left: -13.5%;
+    width: 70%;
+    height: 12vw;
+    padding: 10px;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    color: #333;
+    line-height: 1.2;
+    overflow: auto;
+    resize: none;
+}
+
+button.bf-submit-btn {
+    background-color: #FF8E3D;
+    width: 220px;
+    height: 55px;
+    font-size: 27px;
+    font-weight: 550;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 10px;
     cursor: pointer;
-    margin-top: 10px;
+    margin-left: 20px;
+}
+button.bf-submit-btn:hover {
+    background-color: #fc8732;
+}
+button.bf-submit-btn:active {
+    background-color: #F77C24;
 }
 
-button.submit-btn {
-    background-color: #fb8500; /* Orange color for 'Lähetä' button */
+button.bf-cancel-btn {
+    background-color: #BCBCBC;
+    width: 220px;
+    height: 55px;
+    font-size: 27px;
+    font-weight: 550;
     color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-left: 20px;
+}
+button.bf-cancel-btn:hover {
+    background-color: #AFAFAF;
+}
+button.bf-cancel-btn:active {
+    background-color: #9C9C9C;
 }
 
-button.submit-btn:hover {
-    background-color: #ff6700; /* Slightly darker orange on hover */
-}
-
-button.cancel-btn {
-    background-color: #7e7e7e; /* Grey color for 'Peru' button */
-    color: white;
-}
-
-button.cancel-btn:hover {
-    background-color: #5e5e5e; /* Darker grey on hover */
-}
-
-/* Add alignment for input fields */
-input[type="text"],
-textarea,
-input[type="date"] {
-    width: 100%; /* Full width fields */
-}
-
-/* Align the description field */
-textarea {
-    margin-top: 5px;
-}
-
-/* Add spacing for the image upload section */
-input[type="file"] {
-    margin-top: 5px;
-}
-
-p {
+.bf-createbook-p {
     font-size: 0.9rem;
     color: #555;
     text-align: center;
     margin-top: 15px;
 }
 
-/* Responsive Design */
-@media (max-width: 768px) {
-    .book-creation-container {
-        padding: 15px;
-        width: 90%; /* Adjust the form width */
-    }
+.bf-bottombuttons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    margin-top: 20px;
+}
 
-    input,
-    textarea,
-    button {
-        width: 100%; /* Make input fields and buttons full width */
-    }
+.bf-icon-preview-box {
+    width: 11%;
+    aspect-ratio: 9 / 16;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    margin-right: 20px;
+    position: relative;
+}
+
+.bf-icon-preview-image {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+    aspect-ratio: 9 / 16;
+}
+
+.bf-placeholder-text {
+    font-size: 14px;
+    color: #aaa;
+    text-align: center;
+}
+
+.bf-form-content {
+    margin-top: 1.5%;
+    flex: 1;
+}
+
+.bf-load-btn {
+    background-color: #BCBCBC;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-left: 10px;
+    font-size: 14px;
+}
+
+.bf-load-btn:hover {
+    background-color: #AFAFAF;
+}
+
+.bf-load-btn:active {
+    background-color: #9C9C9C;
+}
+
+.bf-shelf-add-date {
+    margin-left: 10px;
+    font-size: 1rem;
+    color: #555;
+    padding: 10px 0;
+}
+
+.bf-form-content {
+    position: relative;
+}
+
+.bf-date-fields-fixed {
+    margin-right: 10%;
+    width: 30%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.bf-date-fields-fixed > * {
+    width: 100%;
+}
+.bf-date-input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1rem;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.bf-book-info-text {
+    margin-left: 10px;
+    font-size: 1.05rem;
+    color: #333;
+    padding: 10px;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 30%;
+    white-space: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+.bf-book-description-text {
+    margin-top: 1%;
+    margin-left: -13.5%;
+    width: 110%;
+    min-height: 12vw;
+    padding: 10px;
+    font-size: 1rem;
+    overflow-x: auto;
+    overflow-y: hidden;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    color: #333;
+    line-height: 1.4;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
+    overflow-y: auto;
+}
+
+.bf-topbuttons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.bf-edit-btn {
+    background-color: #FF8E3D;
+    width: 175px;
+    height: 55px;
+    font-size: 27px;
+    font-weight: 550;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-left: 20px;
+}
+.bf-edit-btn:hover {
+    background-color: #fc8732;
+}
+.bf-edit-btn:active {
+    background-color: #F77C24;
+}
+
+.bf-delete-btn {
+    background-color: #FF4D4D;
+    width: 175px;
+    height: 55px;
+    font-size: 27px;
+    font-weight: 550;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-left: 20px;
+}
+.bf-delete-btn:hover {
+    background-color: #e43f3f;
+}
+.bf-delete-btn:active {
+    background-color: #d73535;
+}
+
+.bf-home-btn {
+    position: absolute;
+    top: 6.5%;
+    left: 4%;
+    background-color: #BCBCBC;
+    width: 175px;
+    height: 55px;
+    font-size: 27px;
+    font-weight: 550;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.bf-home-btn:hover {
+    background-color: #AFAFAF;
+}
+.bf-home-btn:active {
+    background-color: #9C9C9C;
+}
+
+.bf-delete-confirmation-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+
+.bf-delete-modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.bf-delete-modal-actions {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.bf-delete-modal-confirm-btn {
+    background-color: #FF4D4D;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.bf-delete-modal-confirm-btn:hover {
+    background-color: #e43f3f;
+}
+.bf-delete-modal-confirm-btn:active {
+    background-color: #d73535;
+}
+
+.bf-delete-modal-cancel-btn {
+    background-color: #BCBCBC;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.bf-delete-modal-cancel-btn:hover {
+    background-color: #AFAFAF;
+}
+.bf-delete-modal-cancel-btn:active {
+    background-color: #9C9C9C;
+}
+
+.bf-delete-error-message {
+    color: red;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.warning-message {
+    color: red;
+    font-size: 1rem;
+    margin-bottom: 15px;
+    font-weight: bold;
+    border: 1px solid red;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #ffe6e6;
+}
+
+.genre-checkbox {
+    display: flex;
+    align-items: center; 
+    margin-bottom: 10px;
+}
+
+.genre-checkbox input[type="checkbox"] {
+    cursor: pointer;
+    margin-left: -25%;
+}
+
+.genre-checkbox label {
+    display: inline-block;
+    width: 150px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 1rem;
+    color: #333;
 }
