--- a/Bookshelf/frontend/src/styles/styles.css
+++ b/Bookshelf/frontend/src/styles/styles.css
@@ -7,35 +7,35 @@ body, html {
     align-items: center;
     height: 100vh;
     background-color: #ffff;
-    font-family: "Istok Web";
+    font-family: "Istok Web", sans-serif;
     transition: all 0.3s ease-in-out;
-  }
+}
 
-  .container {
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100vh;
-  }
-  
-  .login-box {
+}
+
+.login-box {
     background: #EEEEEE;
     padding: 60px;
     border-radius: 100px;
     text-align: center;
     width: 750px;
-  }
-  
-  .title {
-    font-family: "Istok Web";
+}
+
+.title {
+    font-family: "Istok Web", sans-serif;
     font-size: 42px;
     font-weight: 400;
     margin-bottom: 50px;
     margin-top: -20px;
-  }
-  
-  .input {
+}
+
+.input {
     width: 45%;
     height: 30px;
     padding: 10px;
@@ -43,9 +43,9 @@ body, html {
     border: 1px solid #B5B5B5;
     border-radius: 8px;
     font-size: 16px;
-  }
-  
-  .register-link {
+}
+
+.register-link {
     display: block;
     margin-left: 25%;
     width: 100px;
@@ -53,9 +53,9 @@ body, html {
     text-decoration: none;
     font-size: 14px;
     margin-bottom: 15px;
-  }
-  
-  .login-button {
+}
+
+.login-button {
     width: 35%;
     height: 65px;
     padding: 10px;
@@ -66,13 +66,13 @@ body, html {
     border: none;
     border-radius: 30px;
     cursor: pointer;
-  }
-  
-  .login-button:hover {
-    background-color: #fc8732;
-  }
+}
 
-  .back-button {
+.login-button:hover {
+    background-color: #fc8732;
+}
+
+.back-button {
     position: absolute;
     top: 20px;
     left: 20px;
@@ -80,11 +80,11 @@ body, html {
     border: none;
     padding: 0;
     cursor: pointer;
-    width:30px;
+    width: 30px;
     height: 30px;
-  }
-  
-  .back-icon {
+}
+
+.back-icon {
     height: 45px;
     width: 45px;
-  }
+}
