--- a/Bookshelf/frontend/src/styles/BookForm.css
+++ b/Bookshelf/frontend/src/styles/BookForm.css
@@ -1,3 +1,5 @@
+/*BookForm.css 
+Huomoi että css tiedostoja ei olla kommentoitu*/
 .bf-book-creation-container {
     display: flex;
     justify-content: space-between;
@@ -135,6 +137,7 @@ button.bf-cancel-btn:active {
     overflow: hidden;
     margin-right: 20px;
     position: relative;
+    flex-shrink: 0;
 }
 
 .bf-icon-preview-image {
@@ -153,7 +156,10 @@ button.bf-cancel-btn:active {
 
 .bf-form-content {
     margin-top: 1.5%;
+    width: 50%;
     flex: 1;
+    position: relative; 
+    max-width: 100%;
 }
 
 .bf-load-btn {
@@ -180,10 +186,6 @@ button.bf-cancel-btn:active {
     font-size: 1rem;
     color: #555;
     padding: 10px 0;
-}
-
-.bf-form-content {
-    position: relative;
 }
 
 .bf-date-fields-fixed {
@@ -225,8 +227,8 @@ button.bf-cancel-btn:active {
 .bf-book-description-text {
     margin-top: 1%;
     margin-left: -13.5%;
-    width: 110%;
-    min-height: 12vw;
+    width: 70%;
+    height: 12vw;
     padding: 10px;
     font-size: 1rem;
     overflow-x: auto;
@@ -235,7 +237,7 @@ button.bf-cancel-btn:active {
     border: 1px solid #ccc;
     border-radius: 5px;
     color: #333;
-    line-height: 1.4;
+    line-height: 1.2;
     overflow-wrap: break-word;
     white-space: pre-wrap;
     overflow-y: auto;
@@ -245,7 +247,6 @@ button.bf-cancel-btn:active {
     display: flex;
     justify-content: flex-end;
     gap: 20px;
-    margin-top: 20px;
     margin-bottom: 20px;
 }
 
@@ -260,7 +261,6 @@ button.bf-cancel-btn:active {
     padding: 10px 15px;
     border-radius: 10px;
     cursor: pointer;
-    margin-left: 20px;
 }
 .bf-edit-btn:hover {
     background-color: #fc8732;
@@ -280,7 +280,6 @@ button.bf-cancel-btn:active {
     padding: 10px 15px;
     border-radius: 10px;
     cursor: pointer;
-    margin-left: 20px;
 }
 .bf-delete-btn:hover {
     background-color: #e43f3f;
@@ -290,9 +289,6 @@ button.bf-cancel-btn:active {
 }
 
 .bf-home-btn {
-    position: absolute;
-    top: 6.5%;
-    left: 4%;
     background-color: #BCBCBC;
     width: 175px;
     height: 55px;
