--- a/Bookshelf/frontend/src/styles/UserSettings.css
+++ b/Bookshelf/frontend/src/styles/UserSettings.css
@@ -1,3 +1,5 @@
+/*UserSettings.css 
+Huomoi että css tiedostoja ei olla kommentoitu*/
 @import url('https://fonts.googleapis.com/css2?family=Istok+Web:wght@400;700&display=swap');
 
 body, html {
